--- a/kilshin.html
+++ b/kilshin.html
@@ -1,3 +1,5 @@
+<!-- THIS IS JUST A COPY PASTE OF INDEX.HTML AS OF JUN 17 2021, USING ANDREI KILSHIN'S PUZZLES -->
+
 <!-- If you are looking to set parameters for your own work, check out the <script> section -->
 <!-- To add your own puzzles, see puzzles.js -->
 
@@ -82,7 +84,8 @@
 
       // initialize the puzzles, you can add your own puzzles in gameboard.js
       // SET THIS networks.puzzles below to the puzzles you wish to include in your experiment, they will appear in the order of the array
-      networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzle3, generatePuzzle4, generatePuzzle5, generatePuzzle6, generatePuzzle7, generatePuzzle8];
+      //networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzle3, generatePuzzle4, generatePuzzle5, generatePuzzle6, generatePuzzle7, generatePuzzle8];
+      networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzleKilshinBaseline, generatePuzzleKilshinSparse, generatePuzzleKilshinSmall, generatePuzzleKilshinShortcut, generatePuzzleKilshinTree, generatePuzzleKilshinTreeShortcut, generatePuzzleKilshinTreeShuffle, generatePuzzleKilshinSemilong, generatePuzzleKilshinLarge];
       networks.propagationPeriod = 500;  // SET THIS to the desired propagation time step, 500 means 500ms per time step
       networks.showScore = true;  // SET THIS to whether you wish the show the user their score at the end of the game
 
