--- a/kilshin.html
+++ b/kilshin.html
@@ -34,7 +34,7 @@
   <script src="js/Networks.js"></script>
   <script src="js/Node.js"></script>
   <script src="js/puzzles.js"></script>
-  <script src="generated/KilshinPuzzles.js"></script>
+  <script src="Kilshin/KilshinPuzzles.js"></script>
   <script src="js/sidePanel.js"></script>
   <script src="js/utility.js"></script>
 
