--- a/kilshin.html
+++ b/kilshin.html
@@ -85,7 +85,7 @@
       // initialize the puzzles, you can add your own puzzles in gameboard.js
       // SET THIS networks.puzzles below to the puzzles you wish to include in your experiment, they will appear in the order of the array
       //networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzle3, generatePuzzle4, generatePuzzle5, generatePuzzle6, generatePuzzle7, generatePuzzle8];
-      networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzleKilshinBaseline, generatePuzzleKilshinSparse, generatePuzzleKilshinSmall, generatePuzzleKilshinShortcut, generatePuzzleKilshinTree, generatePuzzleKilshinTreeShortcut, generatePuzzleKilshinTreeShuffle, generatePuzzleKilshinSemilong, generatePuzzleKilshinLarge];
+      networks.puzzles = [generatePuzzle1, generatePuzzle2, generatePuzzleKilshinBaseline, generatePuzzleKilshinSparse, generatePuzzleKilshinSmall, generatePuzzleKilshinShortcut, generatePuzzle5, generatePuzzleKilshinTree, generatePuzzleKilshinTreeShortcut, generatePuzzleKilshinTreeShuffle, generatePuzzleKilshinSemilong, generatePuzzleKilshinLarge];
       networks.propagationPeriod = 500;  // SET THIS to the desired propagation time step, 500 means 500ms per time step
       networks.showScore = true;  // SET THIS to whether you wish the show the user their score at the end of the game
 
