--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       networks.propagationPeriod = 500;  // SET THIS to the desired propagation time step, 500 means 500ms per time step
       networks.showScore = true;  // SET THIS to whether you wish the show the user their score at the end of the game
       networks.showTriangles = true;  // SET THIS to whether you wish to display some nodes as triangles, in some networks
+      networks.showOptimalNodes = "{{ showAnswers }}" != "" ? true : false;  // SET THIS to whether you wish to display the optimal nodes
       gameboard.askId = false;  // SET THIS to whether you wish to ask for the user's Mechanical Turk ID
 
       // loads the next puzzle into the network (in this initial case, it loads the first puzzle)
