finished demo server and pipeline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <title>Experiment Task</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Network Connectivity Pretest from Georgia Tech's RAIL Lab">
+    <meta name="description" content="Network Inference Pretest from Georgia Tech's RAIL Lab">
     <meta name="author" content="Jack Kolb">
   </head>
 
